--- a/style.css
+++ b/style.css
@@ -25,6 +25,13 @@ body{
   border-radius: 5px;
   box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
 }
+.wrapper img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 .wrapper header{
   font-size: 30px;
   font-weight: 600;
@@ -130,3 +137,12 @@ body{
   opacity: 1;
   pointer-events: auto;
 }
+.copyright{
+  position: absolute; 
+  bottom: 0px; 
+  width: 100%; 
+  color: lightgray;
+  text-align: center;
+  padding: 10px;
+}
+
